--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "vike-react": "0.6.5"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "4.3.1",
+    "@vitejs/plugin-react": "^4.5.1",
     "vite": "5.3.3"
   },
   "imports": {
