--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,7 @@
 {
-  "functions": {
-    "api/index.js": {
-      "runtime": "@vercel/node@3.0.17"
-    }
-  },
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "api/index.js"
-    }
-  ]
+"functions": {
+"api/index.js": {
+"runtime": "nodejs20.x"
+}
+}
 }
