--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,5 @@
 {
-  "functions": {
-    "api/[...path].js": {
-      "runtime": "nodejs20.x",
-      "src": "dist/server/entry.mjs"
-    }
-  }
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist",
+  "framework": "vite"
 }
