--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,13 @@
 {
-  "buildCommand": "npm run build",
-  "outputDirectory": "dist",
-  "framework": "vite"
+  "functions": {
+    "dist/server/entry.mjs": {
+      "runtime": "nodejs@20.x"
+    }
+  },
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/dist/server/entry.mjs"
+    }
+  ]
 }
