--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,8 @@
 {
-  "functions": {
-    "dist/server/entry.mjs": {
-      "runtime": "nodejs@20.x"
-    }
-  },
-  "routes": [
+  "rewrites": [
     {
-      "src": "/(.*)",
-      "dest": "/dist/server/entry.mjs"
+      "source": "/(.*)",
+      "destination": "/api/ssr.js"
     }
   ]
 }
