--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,13 @@
 {
+  "functions": {
+    "api/index.js": {
+      "runtime": "@vercel/node@20.x"
+    }
+  },
   "rewrites": [
     {
       "source": "/(.*)",
-      "destination": "/api/ssr.js"
+      "destination": "/api/index.js"
     }
   ]
 }
