Created api/ssr.js to improve stability in the Vercel environment and also added vite.config.js

--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "type": "module",
   "main": "api/index.js",
+  "engines": {
+  "node": "20.x"
+},
   "scripts": {
     "build": "vike build"
   },
