--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,9 @@
 {
-  "functions": {
-    "api/index.js": {
-      "runtime": "@vercel/node@20.x"
-    }
-  },
+  "version": 2,
   "rewrites": [
     {
       "source": "/(.*)",
-      "destination": "/api/index.js"
+      "destination": "/api/ssr.js"
     }
   ]
 }
