--- a/package.json
+++ b/package.json
@@ -1,25 +1,32 @@
 {
   "name": "vike-reproduction",
   "version": "1.0.0",
+  "private": true,
   "type": "module",
   "main": "api/index.js",
   "engines": {
-  "node": "20.x"
-},
+    "node": "20.x"
+  },
   "scripts": {
-    "build": "vike build"
+    "build": "vike build",
+    "dev": "vite",
+    "preview": "vike preview"
   },
   "dependencies": {
-    "react": "19.1.1",
-    "react-dom": "19.1.1",
-    "vike": "0.4.240",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "vike": "^0.4.240",
     "vike-react": "0.6.5"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.5.1",
-    "vite": "5.3.3"
+    "@vitejs/plugin-react": "^4.7.0",
+    "vite": "^5.3.3"
   },
   "imports": {
     "#vike-server-entry": "./dist/server/entry.js"
-  }
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
